# cpp-illustrated

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  Todo.md  doxyfile
book/: CMakeLists.txt
book/basics/: Directives.cpp  Grid.cpp  Objects.cpp  Preprocessor.cpp  References.cpp  Statements.cpp  StatementsExampleProgram.cpp  Variables.cpp
book/basics/building/: .gitignore  CMakeLists.txt  Car.cpp  Car.hpp  Main.cpp  MainWithArgs.cpp  Makefile
book/basics/names/: MyPerson.hpp  Namespaces.cpp  People.cpp  Puzzle.cpp  Puzzle2.cpp  ScopeAndNameHiding.cpp  YourPerson.hpp
book/basics/statements/: Statements.cpp
book/functions/: Errors.cpp  FunctionObjects.cpp  Overloading.cpp
book/metaprogramming/: Policies.cpp
book/more_basics/: ArithmeticTypes.cpp  Classes.cpp  ControlFlow.cpp  Cryptography.cpp  Expressions.cpp  FloatingPointTypes.cpp  Functions.cpp  IntegralTypes.cpp  Introspection.cpp  Operators.cpp  Types.cpp
book/more_basics/functions/: BadAdd.hpp  BadMain.cpp  InlinedAdd.hpp  Math.cpp  Math.hpp  MathMain.cpp  WackyMultiply.cpp  WackyMultiply.hpp
book/not_so_basics/: Conventions.cpp  Conversions.cpp  Library.cpp  Logging.cpp  ManagementMethods.cpp  Names.cpp  TypeDeduction.cpp
book/not_so_basics/names/: BadMain.cpp  BadPlay.cpp  BadPlay.hpp  BadWork.cpp  BadWork.hpp  CMakeLists.txt  GoodMain.cpp  GoodPlay.cpp  GoodPlay.hpp  GoodWork.cpp  GoodWork.hpp
book/not_so_basics/testing/: Action.hpp  CMakeLists.txt  CardTest.cpp  Database.hpp  DatabaseTest.cpp  Dealer.hpp  Game.cpp  Game.hpp  GameMain.cpp  GameTest.cpp  Hand.cpp  Hand.hpp  HandTest.cpp  HumanPlayer.hpp  Player.hpp  RankTest.cpp  TestMain.cpp
book/performance/: CacheEffects.cpp  CustomAllocator.cpp  Profiling.cpp
luanics/: CMakeLists.txt  TestMain.cpp
luanics/benchmarking/: Benchmark.hpp  Benchmarker.hpp  Benchmarker.ipp  Helpers.cpp  Helpers.hpp  Reporter.hpp  Result.hpp  Showdown.hpp  Showdown.ipp  Statistics.cpp  Statistics.hpp  TableReporter.cpp  TableReporter.hpp  Winner.cpp  Winner.hpp
luanics/benchmarking/test/: BenchmarkTest.cpp  BenchmarkerTest.cpp  RecordingReporter.hpp  ShowdownTest.cpp
luanics/cards/: AbstractModel.cpp  AbstractModel.hpp  Card.cpp  Card.hpp  CardPainter.cpp  CardPainter.hpp  Controller.cpp  Controller.hpp  Deck.cpp  Deck.hpp  Error.hpp  FramePainter.cpp  FramePainter.hpp  FreeCell.cpp  FreeCell.hpp  Game.cpp  Game.hpp  Model.hpp  PaintHelpers.cpp  PaintHelpers.hpp  Pile.hpp  Rank.cpp  Rank.hpp  Suit.cpp  Suit.hpp
luanics/cards/freecell/: Model.cpp  Model.hpp  Painter.cpp  Painter.hpp  Temp.txt
luanics/cards/pile/: Cascade.cpp  Cascade.hpp  Cell.cpp  Cell.hpp  Foundation.cpp  Foundation.hpp
luanics/cards/test/: CardPainterTest.cpp  CardTest.cpp  DeckTest.cpp  RankTest.cpp  SuitTest.cpp
luanics/crypto/: CaesarCipher.cpp  CaesarCipher.hpp  Ciphers.cpp  Ciphers.hpp  Helpers.cpp  Helpers.hpp  Histogram.cpp  Histogram.hpp  RobustCaesarCipher.cpp  RobustCaesarCipher.hpp  StreamCipher.cpp  StreamCipher.hpp  Vigenere.cpp  Vigenere.hpp  VigenereCipher.cpp  VigenereCipher.hpp
luanics/crypto/test/: CaesarCipherTest.cpp  CiphersTest.cpp  CodingTest.cpp  HelpersTest.cpp  IntegerTest.cpp  MathTest.cpp  VigenereCipherTest.cpp  VigenereTest.cpp
luanics/grid/: DynamicGrid.cpp  DynamicGrid.hpp  FlippedGrid.cpp  FlippedGrid.hpp  Grid.cpp  Grid.hpp  SubGrid.cpp  SubGrid.hpp
luanics/grid/test/: DynamicGridTest.cpp  FlippedGridTest.cpp  SubGridTest.cpp
luanics/logging/: Contract.hpp  ContractMacros.hpp  Error.hpp  Filter.hpp  Level.cpp  Level.hpp  LevelFilter.hpp  Logger.cpp  Logger.hpp  Logging.hpp  LoggingMacros.hpp  Macros.hpp  NoFilter.hpp  Record.hpp  SimpleSink.cpp  SimpleSink.hpp  SimpleSource.cpp  SimpleSource.hpp  Sink.hpp  Source.hpp  TupleRecord.hpp  TupleRecord.ipp
luanics/logging/test/: ContractTest.cpp  SimpleSinkTest.cpp  SimpleSourceTest.cpp  TupleRecordTest.cpp
luanics/math/: FloatingPoint.hpp  FloatingPoint.ipp  Operations.hpp  Operations.ipp
luanics/math/test/: OperationsTest.cpp
luanics/memory/: Checker.cpp  Checker.hpp  Checking.cpp  Checking.hpp  PoolAllocator.hpp  PoolAllocator.ipp
luanics/memory/test/: PoolAllocatorTest.cpp
luanics/meta/: Concepts.hpp  Detection.hpp  Detection.ipp  TypeTraits.hpp  TypeTraits.ipp
luanics/meta/test/: DetectionTest.cpp  ListsTest.cpp  TypeListTest.cpp  TypeTraitsTest.cpp  ValueListTest.cpp  VariantTest.cpp  Void_tTest.cpp
luanics/profiling/: GlobalNodeManager.cpp  GlobalNodeManager.hpp  Macros.hpp  Node.hpp  NodeManager.hpp  Profiling.hpp  Reporter.hpp  ScopedEntrance.hpp  ScopedStart.hpp
luanics/profiling/test/: NodeManagerTest.cpp  NodeTest.cpp
luanics/statistics/: Basic.hpp  Basic.ipp  Concepts.hpp  Online.hpp  Online.ipp
luanics/statistics/test/: BasicTest.cpp  ConceptsTest.cpp  OnlineTest.cpp
luanics/string/: AllMatcher.hpp  Conversion.cpp  Conversion.hpp  EnumeratedMatcher.cpp  EnumeratedMatcher.hpp  ExactMatcher.cpp  ExactMatcher.hpp  Manipulation.hpp  Manipulation.ipp  Matcher.hpp  README.md
luanics/string/test/: AllMatcherTest.cpp  EnumeratedMatcherTest.cpp  ExactMatcherTest.cpp  ManipulationTest.cpp
luanics/testing/: Tutorial.hpp  Unit.hpp
luanics/testing/core/: AbstractReporter.cpp  AbstractReporter.hpp  AugmentedReporter.hpp  AugmentedReporterDecorator.cpp  AugmentedReporterDecorator.hpp  Leaf.cpp  (+29 more)
luanics/utility/: Ansi.hpp  Duration.hpp  ExpressionAnalysis.hpp  Herald.hpp  IosState.hpp  ManualClock.hpp  Orator.hpp  Paths.cpp  Paths.hpp  README.md  Random.cpp  Random.hpp  Reverse.hpp  Singleton.hpp  Streams.cpp  Streams.hpp  Strings.hpp  Strings.ipp  Timer.hpp  Timer.ipp  Tuples.hpp  Tuples.ipp
tutorial/: CMakeLists.txt  Definitions.hpp  TutorialMain.cpp
tutorial/basics/: Building.cpp  Directives.cpp  GettingStarted.cpp  Grid.cpp  Objects.cpp  Projects.cpp  References.cpp  Statements.cpp  Variables.cpp
tutorial/more_basics/: ArithmeticTypes.cpp  ControlFlow.cpp  Expressions.cpp  FloatingPointTypes.cpp  Functions.cpp  IntegralTypes.cpp  Introspection.cpp  Names.cpp  Operators.cpp  Types.cpp
tutorial/not_so_basics/: Tools.cpp  TypeDeduction.cpp
(+47 files in other folders)
